tests/errors/erro_param_duplicado.lua
function void teste(a : integer, a : integer) -- Erro: parâmetro duplicado
    print(a);
end

function void main()
    teste(1, 2);
end
